fix between logo, too big

--- a/src/styles/main.2017w.scss
+++ b/src/styles/main.2017w.scss
@@ -108,6 +108,10 @@ h1 {
     margin-bottom: 5vh;
 }
 
+.button-container > h2 {
+    color: white;
+}
+
 .faq-questions {
     .title {
         font-size: 1.6em;
@@ -128,7 +132,7 @@ h1 {
 
     .giga {
         img {
-            width: 70%
+            width: 50%
         }
         margin-bottom: 10vh;
     }
